--- a/config/configuration_template.json
+++ b/config/configuration_template.json
@@ -2,6 +2,6 @@
     "GA_Tracking_ID": "UA-000000-0",
     "GA_Enabled": false,
     "DB_Use_Mongo" : false,
-    "DB_Mongo_URL": "mongodb://localhost/retrospected",
+    "DB_Mongo_URL": "mongodb://localhost/chaotic",
     "Use_Anti_Spam": false
 }
