--- a/package.json
+++ b/package.json
@@ -92,8 +92,10 @@
   },
   "keywords": [
     "agile",
-    "retrospective",
-    "board",
+    "machine learning",
+    "messaging platform",
+    "smart agents",
+    "chatbots",
     "redux",
     "react",
     "universal",
